# Event_feed_list

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
app/: admin.py  models.py  serializers.py  urls.py  utilities.py  views.py
app/management/commands/: seed.py
event_wall/: asgi.py  settings.py  urls.py  wsgi.py
