[tool.poetry]
name = "django_newsline"
version = "0.1.0"
description = ""
authors = ["Aleksey Strelkov <aleks.strel.8v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
