[tool.poetry]
name = "django_feed_line"
version = "2.0.0"
description = ""
authors = ["Aleksey Strelkov <aleks.strel.8v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
Pillow = "^9.4.0"
drf-yasg = "^1.21.4"
django-seed = "^0.3.1"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"
Flake8-pyproject = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
lines_between_types = 0
skip = ["versions"]

[tool.black]
line-length = 120
exclude = ["versions"]

[tool.flake8]
max-line-length = 120
ignore = ["F401", "F405", "W503", "W605"]
exclude = ["versions"]

[tool.mypy]
show_column_numbers = true  # Will add column offsets to error messages
show_error_codes = true  # Shows error codes in error messages
strict = true  # Enables all optional error checking flags
disallow_subclassing_any = false  # Disable error whenever a class subclasses a value of type Any
ignore_missing_imports = true  # Suppresses error messages about imports that cannot be resolved
follow_imports = "silent"  # How mypy follows imported modules
exclude = ["versions", "migrations"]
